adds queries and routes for resources.api stage1 done
