# api/core/backend/app/models/res_type_model.go
@@ -1,0 +1,7 @@
+package models
+
+// ResourceType struct to describe Resource Type object.
+type ResourceType struct {
+	ID   int `db:"id" json:"id"`
+	Name string `db:"name" json:"name"`
+}
