# api/core/backend/app/models/stack_model.go
@@ -1,11 +1,17 @@
 package models
 
+import (
+	"time"
+)
 
 // Stack struct to describe Stack object.
 type Stack struct {
 	ID   int `db:"id" json:"id"`
 	Name string `db:"name" json:"name" validate:"required"`
 	ProjectId int `db:"project_id" json:"project_id"`
+	CreatedAt    time.Time `db:"created_at" json:"created_at"`
+	UpdatedAt    time.Time `db:"updated_at" json:"updated_at"`
+
 }
 
 type CreateStackRequest struct {
